name:                impossible-case-alternative-repro
version:             0.0
build-type:          Simple
cabal-version:       >=1.8

executable impossible-case-alternative-repro
  main-is:        Main.hs
  ghc-options:    -Wall
  build-depends:
      base >= 4 && <5
    , aeson
    , transformers-compat
    , transformers
    , semigroups
    , mtl
    , template-haskell

-- My versions with GHC 7.10:
--   aeson-0.8.0.2
--   transformers-0.4.2.0
--   mtl-2.2.1
--   template-haskell-2.10.0.0
--
-- My versions with GHC 7.8:
--   aeson-0.8.0.2
--   transformers-compat-0.3.3.3
--   mtl-2.1.3.1
--   template-haskell-2.9.0.0
